apps/gpath/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpath
  labels:
    app.kubernetes.io/part-of: gpath
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
